style: fix modal internal elements in dark mode

--- a/style.css
+++ b/style.css
@@ -165,6 +165,22 @@
         background-color: #55161b !important;
     }
 
+    /* Modal Dark Mode Overrides */
+    .source-item {
+        background: #000000;
+        border-color: var(--border);
+    }
+
+    .source-title {
+        color: var(--text-color) !important;
+    }
+
+    .modal-img-large {
+        background: #2d2d2d;
+        border-color: var(--border);
+    }
+
+
 }
 
 /* Custom Font */
